--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -4,7 +4,7 @@
     // }
     #apple_effect {
         width: 100%;
-        height: 10000vh;
+        height: 5000vh;
         background-color: #ebe3d4;
         position: relative;
         .parallax_window {
@@ -20,6 +20,35 @@
                 width: 100%;
                 height: 100vh;
                 overflow: hidden;
+                ///中間背景圖樣式///
+                .sec {
+                    width: 100%;
+                    height: 100vh;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+                ///中間背景圖樣式///
+                ///下方各區背景圖///
+                .sec-01 {
+                    background-image: url("../img/插圖/關於十鼓-修正.jpg");
+                }
+                .sec-02 {
+                    background-image: url("../img/主頁背景/關於十鼓-背景.jpg");
+                }
+                .sec-03 {
+                    background-image: url("../img/主頁背景/沿革-背景.jpg");
+                }
+                .sec-04 {
+                    background-image: url("../img/主頁背景/發展年表-背景.jpg");
+                }
+                .sec-05 {
+                    background-image: url("../img/主頁背景/核心價值-背景.jpg");
+                }
+                .sec-06 {
+                    background-image: url("../img/插圖/飛人\ 上色.png");
+                }
+                ///下方各區背景圖///
                 .footer {
                     width: 100%;
                     position: sticky;
@@ -47,7 +76,24 @@
                     flex-direction: column;
                     align-items: flex-start;
                 }
-
+                .About-06 {
+                    color: #231815;
+                    padding-top: 10%;
+                    padding-left: 30%;
+                    .en-title {
+                        width: 70%;
+                        font-size: 150px;
+                        font-family: "Fredericka the Great", cursive;
+                        .line-01 {
+                            color: #b15821;
+                            font-size: 20px;
+                        }
+                    }
+                    .cn-title {
+                        width: 70%;
+                        font-size: 120px;
+                    }
+                }
                 .about-title {
                     margin-top: 15%;
                     width: 50%;
@@ -69,12 +115,12 @@
                     display: flex;
                     flex-wrap: wrap;
                     .color-gray {
-                        width: 8%;
+                        width: 7%;
                         height: 30px;
                         line-height: 30px;
+                        text-align: center;
                         font-size: 12px;
                         color: #b5b5b6;
-                        margin-left: 10px;
                     }
                     .about-text-5-text {
                         width: 90%;
@@ -154,8 +200,6 @@
                                 }
                             }
 
-                            /* Place the time-container to the left */
-
                             /* Place the time-container to the right */
                             .right {
                                 left: 50%;
@@ -170,9 +214,6 @@
                                 width: 0;
                                 z-index: 1;
                                 left: 30px;
-                                border: medium solid #6a3906;
-                                border-width: 10px 10px 10px 0;
-                                border-color: transparent white transparent transparent;
                             }
 
                             /* Fix the circle for time-containers on the right side */
@@ -227,33 +268,94 @@
                     }
                 }
 
-                ///中間背景圖樣式///
-                .sec {
+                .sec-07 {
                     width: 100%;
                     height: 100vh;
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    background-size: cover;
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    
+                    flex-wrap: wrap;
+                    .img-bac-01 {
+                        width: 50%;
+                        position: absolute;
+                        left: 0;
+                        bottom: 30px;
+                        z-index: -1;
+                    }
+                    .img-bac-02 {
+                        width: 50%;
+                        position: absolute;
+                        right: 0;
+                        bottom: 30px;
+                        z-index: -1;
+                    }
+                    .title-07 {
+                        width: 50%;
+                        height: 10%;
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        .fas.fa-circle {
+                            color: #595757;
+                            font-size: 14px;
+                            line-height: 100px;
+                        }
+                        .sec-07-line {
+                            width: 50%;
+                            height: 50px;
+                            line-height: 50px;
+                            border-bottom: 1px solid #b15821;
+                            .sec-07-title {
+                                width: 100%;
+                                font-size: 40px;
+                                text-align: center;
+                                color: #673a1b;
+                            }
+                        }
+                    }
+                    .sec-07-context {
+                        width: 60%;
+                        height: 80%;
+                        background-color: #0b6c6d;
+                        border-radius: 150px;
+                        color: #f7f8f8;
+                        text-align: left;
+                        padding: 50px;
+                        position: relative;
+                        .img-group {
+                            padding: 30px;
+                            margin: auto;
+                            height: 50%;
+                            margin-bottom: 5%;
+                        }
+                        .sec-07-subtitle {
+                        }
+                        .sty-bol{
+                            font-weight: bolder;
+
+                        }
+                        .sec-07-text {
+                            font-size: 24px;
+                        }
+                        .sec-07-more {
+                            width: 10%;
+                            color: #f7f8f8;
+
+                            text-align: center;
+                            position: absolute;
+                            right: 50px;
+                            bottom: 50px;
+                            background-color: #d4a63f;
+                            border-radius: 10px;
+                            font-family: "Fredericka the Great", cursive;
+                            padding: 5px;
+                            &:hover {
+                                cursor: pointer;
+                            }
+                        }
+                    }
                 }
-                ///中間背景圖樣式///
-                ///下方各區背景圖///
-                .sec-01 {
-                    background-image: url("../img/插圖/關於十鼓-修正.jpg");
-                }
-                .sec-02 {
-                    background-image: url("../img/主頁背景/關於十鼓-背景.jpg");
-                }
-                .sec-03 {
-                    background-image: url("../img/主頁背景/沿革-背景.jpg");
-                }
-                .sec-04 {
-                    background-image: url("../img/主頁背景/發展年表-背景.jpg");
-                }
-                .sec-05 {
-                    background-image: url("../img/主頁背景/核心價值-背景.jpg");
-                }
-                // .sec-06 {
-                // }
             }
         }
     }
