--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -1607,7 +1607,7 @@ a {
 
 #apple_effect {
   width: 100%;
-  height: 5000vh;
+  height: 2000vh;
   background-color: #ebe3d4;
   position: relative;
 }
@@ -1638,27 +1638,137 @@ a {
 }
 
 #apple_effect .parallax_window .effect_box .sec-01 {
-  background-image: url("../img/插圖/關於十鼓-修正.jpg");
+  background-image: url("../img/關於頁面/1.關於十鼓-修正(降).jpg");
 }
 
 #apple_effect .parallax_window .effect_box .sec-02 {
-  background-image: url("../img/主頁背景/關於十鼓-背景.jpg");
+  background-image: url("../img/關於頁面/2.關於十鼓-背景(降).jpg");
 }
 
 #apple_effect .parallax_window .effect_box .sec-03 {
-  background-image: url("../img/主頁背景/沿革-背景.jpg");
+  background-image: url("../img/關於頁面/3.沿革-背景(降).jpg");
 }
 
 #apple_effect .parallax_window .effect_box .sec-04 {
-  background-image: url("../img/主頁背景/發展年表-背景.jpg");
+  background-image: url("../img/關於頁面/4.發展年表-背景(降).jpg");
 }
 
 #apple_effect .parallax_window .effect_box .sec-05 {
-  background-image: url("../img/主頁背景/核心價值-背景.jpg");
+  background-image: url("../img/關於頁面/5.核心價值-背景(降).jpg");
 }
 
 #apple_effect .parallax_window .effect_box .sec-06 {
-  background-image: url("../img/插圖/飛人 上色.png");
+  background-image: url("../img/關於頁面/6.飛人上色.png");
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 {
+  background-image: url("../img/插圖/雙飛飛人.png");
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .title-08 {
+  width: 50%;
+  height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .title-08 .fas.fa-circle {
+  color: #595757;
+  font-size: 14px;
+  line-height: 100px;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .title-08 .sec-08-line {
+  width: 50%;
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px solid #b15821;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .title-08 .sec-08-line .sec-08-title {
+  width: 100%;
+  font-size: 40px;
+  text-align: center;
+  color: #673a1b;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context {
+  width: 80%;
+  height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  color: #231815;
+  text-align: left;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .img-group {
+  margin: auto;
+  padding: 30px;
+  width: 80%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .img-group .sec-08-img {
+  width: 90%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox {
+  margin: auto;
+  width: 70%;
+  position: relative;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-subtitle {
+  width: 50%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sty-bol {
+  font-weight: bolder;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-text {
+  width: 80%;
+  font-size: 24px;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-more {
+  width: 10%;
+  color: #f7f8f8;
+  text-align: center;
+  position: absolute;
+  right: 50px;
+  bottom: 0;
+  background-color: #0b6c6d;
+  border-radius: 10px;
+  font-family: "Fredericka the Great", cursive;
+  padding: 5px;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-more:hover {
+  cursor: pointer;
+  letter-spacing: 2px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 #apple_effect .parallax_window .effect_box .footer {
