--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -4,7 +4,7 @@
     // }
     #apple_effect {
         width: 100%;
-        height: 5000vh;
+        height: 2000vh;
         background-color: #ebe3d4;
         position: relative;
         .parallax_window {
@@ -30,25 +30,6 @@
                 }
                 ///中間背景圖樣式///
                 ///下方各區背景圖///
-                // .sec-01 {
-                //     background-image: url("../img/插圖/關於十鼓-修正.jpg");
-                // }
-                // .sec-02 {
-                //     background-image: url("../img/主頁背景/關於十鼓-背景.jpg");
-                // }
-                // .sec-03 {
-                //     background-image: url("../img/主頁背景/沿革-背景.jpg");
-                // }
-                // .sec-04 {
-                //     background-image: url("../img/主頁背景/發展年表-背景.jpg");
-                // }
-                // .sec-05 {
-                //     background-image: url("../img/主頁背景/核心價值-背景.jpg");
-                // }
-                // .sec-06 {
-                //     background-image: url("../img/插圖/飛人\ 上色.png");
-                // }
-
                 .sec-01 {
                     background-image: url("../img/關於頁面/1.關於十鼓-修正\(降\).jpg");
                 }
@@ -66,6 +47,88 @@
                 }
                 .sec-06 {
                     background-image: url("../img/關於頁面/6.飛人上色.png");
+                }
+                .sec-08 {
+                    background-image: url("../img/插圖/雙飛飛人.png");
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    .title-08 {
+                        width: 50%;
+                        height: 10%;
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        .fas.fa-circle {
+                            color: #595757;
+                            font-size: 14px;
+                            line-height: 100px;
+                        }
+                        .sec-08-line {
+                            width: 50%;
+                            height: 50px;
+                            line-height: 50px;
+                            border-bottom: 1px solid #b15821;
+                            .sec-08-title {
+                                width: 100%;
+                                font-size: 40px;
+                                text-align: center;
+                                color: #673a1b;
+                            }
+                        }
+                    }
+                    .sec-08-context {
+                        width: 80%;
+                        height: 80%;
+                        display: flex;
+                        flex-direction: column;                        
+                        justify-content: space-around;
+                        
+                        color: #231815;
+                        text-align: left;                        
+                        .img-group {
+                            margin: auto;
+                            padding: 30px;
+                            width: 80%;
+                            
+                            .sec-08-img {
+                                width: 90%;
+                            }
+                        }
+                        .sec-08-textbox {    
+                            margin: auto;                        
+                            width: 70%;                            
+                            position: relative;
+                            .sec-08-subtitle {
+                                width: 50%;
+                            }
+                            .sty-bol {
+                                font-weight: bolder;
+                            }
+                            .sec-08-text {
+                                width: 80%;
+                                font-size: 24px;
+                            }
+                            .sec-08-more {
+                                width: 10%;
+                                color: #f7f8f8;
+
+                                text-align: center;
+                                position: absolute;
+                                right: 50px;
+                                bottom: 0;
+                                background-color: #0b6c6d;
+                                border-radius: 10px;
+                                font-family: "Fredericka the Great", cursive;
+                                padding: 5px;
+                                &:hover {
+                                    cursor: pointer;
+                                    letter-spacing: 2px;
+                                    transition: 0.5s;
+                                }
+                            }
+                        }
+                    }
                 }
                 ///下方各區背景圖///
                 .footer {
@@ -293,7 +356,7 @@
                     position: relative;
                     display: flex;
                     justify-content: center;
-                    
+
                     flex-wrap: wrap;
                     .img-bac-01 {
                         width: 50%;
@@ -350,9 +413,8 @@
                         }
                         .sec-07-subtitle {
                         }
-                        .sty-bol{
+                        .sty-bol {
                             font-weight: bolder;
-
                         }
                         .sec-07-text {
                             font-size: 24px;
