--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -1673,104 +1673,6 @@ a {
           justify-content: center;
 }
 
-#apple_effect .parallax_window .effect_box .sec-08 .title-08 {
-  width: 50%;
-  height: 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .title-08 .fas.fa-circle {
-  color: #595757;
-  font-size: 14px;
-  line-height: 100px;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .title-08 .sec-08-line {
-  width: 50%;
-  height: 50px;
-  line-height: 50px;
-  border-bottom: 1px solid #b15821;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .title-08 .sec-08-line .sec-08-title {
-  width: 100%;
-  font-size: 40px;
-  text-align: center;
-  color: #673a1b;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context {
-  width: 80%;
-  height: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  color: #231815;
-  text-align: left;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .img-group {
-  margin: auto;
-  padding: 30px;
-  width: 80%;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .img-group .sec-08-img {
-  width: 90%;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox {
-  margin: auto;
-  width: 70%;
-  position: relative;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-subtitle {
-  width: 50%;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sty-bol {
-  font-weight: bolder;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-text {
-  width: 80%;
-  font-size: 24px;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-more {
-  width: 10%;
-  color: #f7f8f8;
-  text-align: center;
-  position: absolute;
-  right: 50px;
-  bottom: 0;
-  background-color: #0b6c6d;
-  border-radius: 10px;
-  font-family: "Fredericka the Great", cursive;
-  padding: 5px;
-}
-
-#apple_effect .parallax_window .effect_box .sec-08 .sec-08-context .sec-08-textbox .sec-08-more:hover {
-  cursor: pointer;
-  letter-spacing: 2px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
 #apple_effect .parallax_window .effect_box .footer {
   width: 100%;
   position: -webkit-sticky;
@@ -2128,5 +2030,153 @@ a {
 
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-more:hover {
   cursor: pointer;
+}
+
+#apple_effect .parallax_window .effect_box .title-08 {
+  width: 50%;
+  height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+#apple_effect .parallax_window .effect_box .title-08 .fas.fa-circle {
+  color: #595757;
+  font-size: 14px;
+  line-height: 100px;
+}
+
+#apple_effect .parallax_window .effect_box .title-08 .sec-08-line {
+  width: 50%;
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px solid #b15821;
+}
+
+#apple_effect .parallax_window .effect_box .title-08 .sec-08-line .sec-08-title {
+  width: 100%;
+  font-size: 40px;
+  text-align: center;
+  color: #673a1b;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context {
+  width: 80%;
+  height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  color: #231815;
+  text-align: left;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .img-group {
+  margin: auto;
+  padding: 30px;
+  width: 80%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .img-group .sec-08-img {
+  width: 90%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox {
+  margin: auto;
+  width: 70%;
+  position: relative;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-subtitle {
+  width: 50%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sty-bol {
+  font-weight: bolder;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-text {
+  width: 80%;
+  font-size: 24px;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-more {
+  width: 10%;
+  color: #f7f8f8;
+  text-align: center;
+  position: absolute;
+  right: 50px;
+  bottom: 0;
+  background-color: #0b6c6d;
+  border-radius: 10px;
+  font-family: "Fredericka the Great", cursive;
+  padding: 5px;
+}
+
+#apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-more:hover {
+  cursor: pointer;
+  letter-spacing: 2px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context {
+  width: 80%;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context .img-group-09 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context .img-group-09 .img-09 {
+  width: 25%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context .img-group-09 .img-09-team {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context .img-group-09 .img-09-team .img-09-01 {
+  width: 100%;
+  opacity: 0.5;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#apple_effect .parallax_window .effect_box .sec-09 .sec-09-context .img-group-09 .img-09-team .img-09-01:hover {
+  height: 50%;
+  opacity: 1;
 }
 /*# sourceMappingURL=TenDrum.css.map */
