--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -53,83 +53,8 @@
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: center;
-                    .title-08 {
-                        width: 50%;
-                        height: 10%;
-                        display: flex;
-                        justify-content: center;
-                        align-content: center;
-                        .fas.fa-circle {
-                            color: #595757;
-                            font-size: 14px;
-                            line-height: 100px;
-                        }
-                        .sec-08-line {
-                            width: 50%;
-                            height: 50px;
-                            line-height: 50px;
-                            border-bottom: 1px solid #b15821;
-                            .sec-08-title {
-                                width: 100%;
-                                font-size: 40px;
-                                text-align: center;
-                                color: #673a1b;
-                            }
-                        }
-                    }
-                    .sec-08-context {
-                        width: 80%;
-                        height: 80%;
-                        display: flex;
-                        flex-direction: column;                        
-                        justify-content: space-around;
-                        
-                        color: #231815;
-                        text-align: left;                        
-                        .img-group {
-                            margin: auto;
-                            padding: 30px;
-                            width: 80%;
-                            
-                            .sec-08-img {
-                                width: 90%;
-                            }
-                        }
-                        .sec-08-textbox {    
-                            margin: auto;                        
-                            width: 70%;                            
-                            position: relative;
-                            .sec-08-subtitle {
-                                width: 50%;
-                            }
-                            .sty-bol {
-                                font-weight: bolder;
-                            }
-                            .sec-08-text {
-                                width: 80%;
-                                font-size: 24px;
-                            }
-                            .sec-08-more {
-                                width: 10%;
-                                color: #f7f8f8;
-
-                                text-align: center;
-                                position: absolute;
-                                right: 50px;
-                                bottom: 0;
-                                background-color: #0b6c6d;
-                                border-radius: 10px;
-                                font-family: "Fredericka the Great", cursive;
-                                padding: 5px;
-                                &:hover {
-                                    cursor: pointer;
-                                    letter-spacing: 2px;
-                                    transition: 0.5s;
-                                }
-                            }
-                        }
-                    }
                 }
+
                 ///下方各區背景圖///
                 .footer {
                     width: 100%;
@@ -433,6 +358,116 @@
                             padding: 5px;
                             &:hover {
                                 cursor: pointer;
+                            }
+                        }
+                    }
+                }
+                .title-08 {
+                    width: 50%;
+                    height: 10%;
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
+                    .fas.fa-circle {
+                        color: #595757;
+                        font-size: 14px;
+                        line-height: 100px;
+                    }
+                    .sec-08-line {
+                        width: 50%;
+                        height: 50px;
+                        line-height: 50px;
+                        border-bottom: 1px solid #b15821;
+                        .sec-08-title {
+                            width: 100%;
+                            font-size: 40px;
+                            text-align: center;
+                            color: #673a1b;
+                        }
+                    }
+                }
+                .sec-08-context {
+                    width: 80%;
+                    height: 80%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+
+                    color: #231815;
+                    text-align: left;
+                    .img-group {
+                        margin: auto;
+                        padding: 30px;
+                        width: 80%;
+
+                        .sec-08-img {
+                            width: 90%;
+                        }
+                    }
+                    .sec-08-textbox {
+                        margin: auto;
+                        width: 70%;
+                        position: relative;
+                        .sec-08-subtitle {
+                            width: 50%;
+                        }
+                        .sty-bol {
+                            font-weight: bolder;
+                        }
+                        .sec-08-text {
+                            width: 80%;
+                            font-size: 24px;
+                        }
+                        .sec-08-more {
+                            width: 10%;
+                            color: #f7f8f8;
+
+                            text-align: center;
+                            position: absolute;
+                            right: 50px;
+                            bottom: 0;
+                            background-color: #0b6c6d;
+                            border-radius: 10px;
+                            font-family: "Fredericka the Great", cursive;
+                            padding: 5px;
+                            &:hover {
+                                cursor: pointer;
+                                letter-spacing: 2px;
+                                transition: 0.5s;
+                            }
+                        }
+                    }
+                }
+                .sec-09 {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    .sec-09-context {
+                        width: 80%;
+                        .img-group-09 {
+                            display: flex;
+                            flex-wrap: wrap;
+                            .img-09 {
+                                width: 25%;                                
+                                transition: 0.5s;
+                                
+                                &:hover {                                    
+                                   
+                                }
+                            }
+                            .img-09-team {
+                                width: 50%;
+                                display: flex;
+                                flex-wrap: wrap;
+                                .img-09-01 {
+                                    width: 100%;
+                                    opacity: 0.5;
+                                    transition: 0.5s;
+                                    &:hover {
+                                        height: 50%;
+                                        opacity: 1;
+                                    }
+                                }
                             }
                         }
                     }
