--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -59,7 +59,7 @@
                 .footer {
                     width: 100%;
                     position: sticky;
-                    bottom: 0;
+                    bottom: 42px;
                     background-color: rgba(177, 88, 33, 0.1);
                     height: 42px;
                     color: #595757;
@@ -336,8 +336,6 @@
                             height: 50%;
                             margin-bottom: 5%;
                         }
-                        .sec-07-subtitle {
-                        }
                         .sty-bol {
                             font-weight: bolder;
                         }
@@ -449,10 +447,37 @@
                             flex-wrap: wrap;
                             .img-09 {
                                 width: 25%;                                
-                                transition: 0.5s;
-                                
-                                &:hover {                                    
-                                   
+                                position: relative;
+                                .img-09-01{
+                                    display: block;
+                                    width: 100%;
+                                    height: 50%;
+                                    
+                                }
+                                .overlay {
+                                    position: absolute;
+                                    bottom: 0;
+                                    left: 0;
+                                    right: 0;
+                                    background-color: #BC6821;
+                                    overflow: hidden;
+                                    width: 0;
+                                    height: 100%;
+                                    transition: .5s ease;
+                                    .img-09-text {
+                                        color: white;
+                                        font-size: 20px;
+                                        position: absolute;
+                                        top: 50%;
+                                        left: 50%;
+                                        -webkit-transform: translate(-50%, -50%);
+                                        -ms-transform: translate(-50%, -50%);
+                                        transform: translate(-50%, -50%);
+                                        white-space: nowrap;
+                                    }
+                                }
+                                &:hover .overlay {
+                                    width: 100%;
                                 }
                             }
                             .img-09-team {
