--- a/CSS/_index.scss
+++ b/CSS/_index.scss
@@ -144,7 +144,7 @@
             position: absolute;
             bottom: 0;
             z-index: -1;
-            background-image: url("../img/主頁背景/主頁背景_工作區域\ 1.jpg");
+            background-image: url("../img/主頁背景/主頁背景-降_工作區域\ 1.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
